# PyGameSnake

./: README.md  pyproject.toml
pygamesnake/game/: snake.py
pygamesnake/machine_learning/: test_model.py  train_model.py  training_data.py
